// proto/posts/v1/posts.proto
syntax = "proto3";

package posts.v1;

option go_package = "blog-system/proto/posts/v1;postsv1";

service PostService {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
    rpc GetPost (GetPostRequest) returns (GetPostResponse);
    rpc ListPosts (ListPostsRequest) returns (ListPostsResponse);
    rpc UpdatePost (UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);
}

message Post {
    string id = 1;
    string title = 2;
    string content = 3;
    string author_id = 4;
    string created_at = 5;
    string updated_at = 6;
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
    string author_id = 3;
}

message CreatePostResponse {
    Post post = 1;
}

message GetPostRequest {
    string id = 1;
}

message GetPostResponse {
    Post post = 1;
}

message ListPostsRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ListPostsResponse {
    repeated Post posts = 1;
    int32 total = 2;
}

message UpdatePostRequest {
    string id = 1;
    string title = 2;
    string content = 3;
}

message UpdatePostResponse {
    Post post = 1;
}

message DeletePostRequest {
    string id = 1;
}

message DeletePostResponse {
    bool success = 1;
}
